# dm-modbus-can-temp-monitor-frdm

./: README.md  SW-Content-Register.txt  west.yml
COPYING-BSD-3/: COPYING-BSD-3.txt
apps/dm-modbus-can-temp-monitor-frdm-mcxa156/: .gitignore  CMakeLists.txt  prj.conf
apps/dm-modbus-can-temp-monitor-frdm-mcxa156/boards/: frdm_mcxa156.overlay
apps/dm-modbus-can-temp-monitor-frdm-mcxa156/src/: main.c  relay-5-click.c  relay-5-click.h
apps/dm-modbus-can-temp-monitor-frdm-mcxe31b/: CMakeLists.txt  prj.conf
apps/dm-modbus-can-temp-monitor-frdm-mcxe31b/boards/: frdm_mcxe31b.overlay
apps/dm-modbus-can-temp-monitor-frdm-mcxe31b/src/: main.c
